--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <!-- CRITICAL for iPad/Tablet Compatibility -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Piano Visualizer App</title>
-    <!-- PWA Manifest Link -->
-    <link rel="manifest" href="/manifest.json">
+    <!-- PWA Manifest Link - USING RELATIVE PATH -->
+    <link rel="manifest" href="./manifest.json">
     <!-- Load Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -563,7 +563,7 @@
             populateSelectors();
             updateVisualization();
             
-            // PWA Service Worker Registration
+            // PWA Service Worker Registration - USING RELATIVE PATH
             if ('serviceWorker' in navigator) {
                 // Use a relative path to ensure correct scoping on GitHub Pages subdirectories
                 navigator.serviceWorker.register('./service-worker.js')
