--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 PianoViz
             </h1>
             <p class="text-center text-gray-600 text-sm md:text-base">
-                Visualize harmony on your phone or tablet.
+                Visualize harmony anywhere.
             </p>
         </header>
         <!-- Mode Selection Buttons -->
